Classifieur à marge de taskar et nouvelle syntaxe org-mode pour les commentaires

--- a/Manuscrit/glossaries_header.org
+++ b/Manuscrit/glossaries_header.org
@@ -1,3 +1,4 @@
+#+LATEX_HEADER: \usepackage{tikz}
 
 #+latex_header:\def\E{\operatornamewithlimits{%
 #+latex_header:\mathchoice{\vcenter{\hbox{\huge \ensuremath{\mathbb{E}}}}}
